<resources>
    // App
    <string name="app_name">Interoperability Compose</string>

    // AppBar
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    // Drawer
    <string name="nav_header_title">Gentle_Hilt</string>
    <string name="nav_header_credentials">gentle1hilt@gmail.com || Gentle Hilt#9399</string>
    <string name="nav_header_api">https://rickandmortyapi.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="developed_by">Developed by</string>
    <string name="made_with_free">Made with free:</string>
    <string name="api">Api</string>

    // Menu
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>

    // Episode
    <string name="episode_details">Episode Details</string>
    <string name="character_details">Character Details</string>

    // Error Messages
    <string name="check_internet">Check your internet connection</string>
    <string name="failed_to_load">Failed to load data</string>
    <string name="retry">Retry</string>

    // Redirect Dialog Message
    <string name="redirect_message">Are you sure you want to go to the Rick and Morty API website?</string>
    <string name="redirect_tittle">Are you leaving?</string>
    <string name="api_link">https://rickandmortyapi.com</string>

</resources>