<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/main_appbar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/developed_by" />

        <TextView
            android:id="@+id/me"
            android:layout_marginStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/drawer_header" />

    <TextView
        android:id="@+id/header_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_credentials"
        android:textSize="12sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <LinearLayout
        android:id="@+id/header_text"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/made_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/made_with_free" />

        <TextView
            android:id="@+id/api_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api"
            android:layout_marginStart="5dp"
            android:textSize="17sp"
            android:textColor="@color/link_color"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>